# atk-training-nitesh-FastApiPSQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
fastapi_1/: database.py  main.py  models.py  prototyping.ipynb
fastapi_1/templates/: table.html
